--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "condev",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.js",
   "support": "condev.support.js",
@@ -27,12 +27,14 @@
   },
   "homepage": "https://github.com/volkovasystems/condev#readme",
   "dependencies": {
+    "annon": "^0.1.0",
     "arkount": "^0.6.0",
     "babel-runtime": "^6.23.0",
     "clazof": "^0.22.0",
     "enyof": "^0.2.0",
     "eqe": "^0.1.0",
     "falzy": "^0.19.0",
+    "fnamed": "^0.0.0",
     "protype": "^0.21.0",
     "truly": "^0.18.0",
     "vound": "^0.18.0",
