--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "condev",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.js",
   "support": "condev.support.js",
@@ -21,6 +21,9 @@
     "condev"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/condev/issues"
@@ -37,7 +40,7 @@
     "fnamed": "^0.0.0",
     "protype": "^0.21.0",
     "truly": "^0.18.0",
-    "vound": "^0.18.0",
+    "vound": "^0.19.0",
     "zelf": "^0.11.0"
   },
   "devDependencies": {
