--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "condev",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.deploy.js",
   "support": "condev.support.js",
@@ -26,11 +26,13 @@
   "dependencies": {
     "annon": "^0.6.0",
     "clazof": "^0.27.0",
+    "doubt": "^0.26.0",
     "enyof": "^0.6.0",
     "eqe": "^0.2.0",
     "falzy": "^0.19.0",
     "fnamed": "^0.8.0",
     "protype": "^0.21.0",
+    "raze": "^0.29.0",
     "truly": "^0.18.0",
     "vound": "^0.24.0",
     "zelf": "^0.11.0"
