--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "condev",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.js",
   "support": "condev.support.js",
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/volkovasystems/condev#readme",
   "dependencies": {
     "annon": "^0.6.0",
+    "aply": "^0.0.0",
     "babel-runtime": "^6.23.0",
     "clazof": "^0.27.0",
     "doubt": "^0.26.0",
@@ -40,9 +41,7 @@
     "fnamed": "^0.8.0",
     "protype": "^0.21.0",
     "raze": "^0.29.0",
-    "truly": "^0.18.0",
-    "vound": "^0.24.0",
-    "zelf": "^0.11.0"
+    "truly": "^0.18.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -50,6 +49,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.1"
   }
 }
