--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "condev",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.js",
   "support": "condev.support.js",
@@ -31,8 +31,8 @@
   "homepage": "https://github.com/volkovasystems/condev#readme",
   "dependencies": {
     "annon": "^0.6.0",
-    "aply": "^0.1.0",
     "babel-runtime": "^6.23.0",
+    "cald": "^0.0.0",
     "clazof": "^0.27.0",
     "doubt": "^0.26.0",
     "enyof": "^0.7.0",
