--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "condev",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "description": "Evaluate condition over entity.",
   "main": "condev.deploy.js",
   "support": "condev.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -26,7 +27,7 @@
   "dependencies": {
     "annon": "^0.7.0",
     "cald": "^0.2.0",
-    "clazof": "^0.30.0",
+    "clazof": "^0.31.0",
     "doubt": "^0.27.0",
     "enyof": "^0.9.0",
     "eqe": "^0.3.0",
