--- a/bower.json
+++ b/bower.json
@@ -1,40 +1,60 @@
 {
-  "name": "condev",
-  "version": "0.17.0",
-  "description": "Evaluate condition over entity.",
-  "main": "condev.deploy.js",
-  "support": "condev.support.js",
-  "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "keywords": [
-    "evaluate",
-    "condition",
-    "entity",
-    "condev"
-  ],
-  "homepage": "https://github.com/volkovasystems/condev",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "annon": "^0.9.0",
-    "cald": "^0.4.0",
-    "clazof": "^0.33.0",
-    "doubt": "^0.30.0",
-    "enyof": "^0.10.0",
-    "eqe": "^0.4.0",
-    "falzy": "^0.20.0",
-    "fnamed": "^0.11.0",
-    "protype": "^0.22.0",
-    "raze": "^0.33.0",
-    "truly": "^0.19.0"
-  }
+	"name": "condev",
+	"version": "0.18.0",
+	"description": "Evaluate condition over entity.",
+	"main": "condev.deploy.js",
+	"support": "condev.support.js",
+	"authors": [
+		"Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"keywords": [
+		"evaluate",
+		"condition",
+		"entity",
+		"condev"
+	],
+	"homepage": "https://github.com/volkovasystems/condev",
+	"ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests"
+	],
+	"resolutions": {
+		"doubt": "^0.34.0",
+		"annon": "^0.11.0",
+		"falzy": "^0.23.0",
+		"raze": "^0.34.0",
+		"protype": "^0.24.0",
+		"fnamed": "^0.13.0",
+		"truly": "^0.20.0",
+		"fname": "^0.13.0",
+		"shft": "^0.5.0",
+		"harden": "^0.23.0",
+		"cemento": "^0.17.0",
+		"mtch": "^0.6.0",
+		"arid": "^0.30.0",
+		"kount": "^0.12.0",
+		"arkount": "^0.12.0",
+		"eqe": "^0.5.0",
+		"nafe": "^0.5.0"
+	},
+	"dependencies": {
+		"annon": "^0.11.0",
+		"cald": "^0.6.0",
+		"clazof": "^0.34.0",
+		"doubt": "^0.34.0",
+		"enyof": "^0.10.0",
+		"eqe": "^0.5.0",
+		"falzy": "^0.23.0",
+		"fnamed": "^0.13.0",
+		"protype": "^0.24.0",
+		"raze": "^0.34.0",
+		"truly": "^0.20.0",
+		"zelf": "^0.14.0"
+	}
 }
