--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "condev",
-  "version": "0.17.0",
-  "description": "Evaluate condition over entity.",
-  "main": "condev.js",
-  "support": "condev.support.js",
-  "deploy": "condev.deploy.js",
-  "browser": "condev.deploy.js",
-  "scripts": {
-    "build": "babel condev.js --out-file condev.support.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha condev-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/condev.git"
-  },
-  "keywords": [
-    "evaluate",
-    "condition",
-    "entity",
-    "condev"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/condev/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/condev#readme",
-  "dependencies": {
-    "annon": "^0.9.0",
-    "babel-runtime": "^6.23.0",
-    "cald": "^0.4.0",
-    "clazof": "^0.33.0",
-    "doubt": "^0.30.0",
-    "enyof": "^0.10.0",
-    "eqe": "^0.4.0",
-    "falzy": "^0.20.0",
-    "fnamed": "^0.11.0",
-    "protype": "^0.22.0",
-    "raze": "^0.33.0",
-    "truly": "^0.19.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^3.1.0"
-  }
+	"name": "condev",
+	"version": "0.18.0",
+	"description": "Evaluate condition over entity.",
+	"main": "condev.js",
+	"support": "condev.support.js",
+	"deploy": "condev.deploy.js",
+	"browser": "condev.deploy.js",
+	"scripts": {
+		"build": "babel condev.js --out-file condev.support.js --source-maps && webpack --progress --display-modules",
+		"test": "mocha condev-test.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/condev.git"
+	},
+	"keywords": [
+		"evaluate",
+		"condition",
+		"entity",
+		"condev"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/condev/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/condev#readme",
+	"dependencies": {
+		"annon": "^0.11.0",
+		"babel-runtime": "^6.25.0",
+		"cald": "^0.6.0",
+		"clazof": "^0.34.0",
+		"doubt": "^0.34.0",
+		"enyof": "^0.10.0",
+		"eqe": "^0.5.0",
+		"falzy": "^0.23.0",
+		"fnamed": "^0.13.0",
+		"protype": "^0.24.0",
+		"raze": "^0.34.0",
+		"truly": "^0.20.0",
+		"zelf": "^0.14.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"source-map-loader": "^0.2.1",
+		"webpack": "^3.4.1"
+	}
 }
