--- a/package.json
+++ b/package.json
@@ -1,55 +1,62 @@
 {
-  "name": "condev",
-  "version": "0.16.0",
-  "description": "Evaluate condition over entity.",
-  "main": "condev.js",
-  "support": "condev.support.js",
-  "deploy": "condev.deploy.js",
-  "browser": "condev.deploy.js",
-  "scripts": {
-    "build": "babel condev.js --out-file condev.support.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha condev-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/condev.git"
-  },
-  "keywords": [
-    "evaluate",
-    "condition",
-    "entity",
-    "condev"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/condev/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/condev#readme",
-  "dependencies": {
-    "annon": "^0.7.0",
-    "babel-runtime": "^6.23.0",
-    "cald": "^0.2.0",
-    "clazof": "^0.31.0",
-    "doubt": "^0.27.0",
-    "enyof": "^0.9.0",
-    "eqe": "^0.3.0",
-    "falzy": "^0.20.0",
-    "fnamed": "^0.9.0",
-    "protype": "^0.22.0",
-    "raze": "^0.30.0",
-    "truly": "^0.19.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^2.6.1"
-  }
+	"name": "condev",
+	"version": "0.16.0",
+	"description": "Evaluate condition over entity.",
+	"main": "condev.js",
+	"support": "condev.support.js",
+	"deploy": "condev.deploy.js",
+	"browser": "condev.deploy.js",
+	"scripts": {
+		"pristine": "rsetmod clean && flxc execute ./.install.sh",
+		"clear": "rsetmod clean --clear",
+		"formal": "jesy apply '*.json'",
+		"build:support": "gulp --module condev --all",
+		"build:deploy": "webpack --config webpack.compact.js --progress --display-modules",
+		"rebuild": "npm run build:support && npm run build:deploy",
+		"build": "npm run pristine && npm run rebuild",
+		"build:test:support": "gulp --module test --all",
+		"build:test:deploy": "webpack --config webpack.test.js --progress --display-modules",
+		"build:test:bridge": "gulp --module test --bridge",
+		"build:test": "npm run build:test:support && npm run build:test:deploy && npm run build:test:bridge",
+		"test:server": "mocha test.js && mocha test.js --reporter=json > test.server.json",
+		"test:client": "./node_modules/.bin/wdio wdio.client.js",
+		"pretest": "npm run clear && npm run rebuild && npm run build:test",
+		"test": "npm run test:server && npm run test:client",
+		"posttest": "npm run formal",
+		"deploy": "npm run build && npm run build:test && npm run test:server && npm run test:client && npm run formal"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/condev.git"
+	},
+	"keywords": [
+		"evaluate",
+		"condition",
+		"entity",
+		"condev"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/condev/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/condev#readme",
+	"dependencies": {
+		"annon": "^0.12.0",
+		"babel-runtime": "^6.25.0",
+		"cald": "^0.6.0",
+		"clazof": "^0.36.0",
+		"doubt": "^0.34.0",
+		"enyof": "^0.11.0",
+		"eqe": "^0.5.0",
+		"falzy": "^0.23.0",
+		"fnamed": "^0.14.0",
+		"protype": "^0.24.0",
+		"raze": "^0.34.0",
+		"truly": "^0.20.0"
+	}
 }
